gccida/c0/save_call_clobbered_regs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:829:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // [rsp+18h] [rbp-168h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:830:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // [rsp+1Ch] [rbp-164h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:831:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // [rsp+20h] [rbp-160h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:839:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+50h] [rbp-130h] 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:839:20: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:839:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+50h] [rbp-130h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:840:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+5Ch] [rbp-124h] 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:840:16: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:840:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+5Ch] [rbp-124h] 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:846:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+84h] [rbp-FCh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:848:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode save_mode[53]; // [rsp+90h] [rbp-F0h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:900:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:904:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:908:20: error: invalid suffix 'xnum_' on integer constant
while ( *(short *)0xnum_ < 2 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:910:12: error: invalid suffix 'x' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:910:38: error: invalid suffix 'xnum_' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:911:17: error: invalid suffix 'x' on integer constant
if ( *(short *)0x ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:915:40: error: invalid suffix 'x' on integer constant
if ( ( ( 1LL << bit_num_) & *(short *)0x) != 0 ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:917:12: error: invalid suffix 'x' on integer constant
*(short *)0x &= ~( 1LL << bit_num_); 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:918:35: error: invalid suffix 'xnum_' on integer constant
regno_0 = bit_num_ + ( *(short *)0xnum_ << 6) + ( ptr_->indx << 7); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/caller-save.c:960:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[regno_0])] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/save_call_clobbered_regs/src/obj/caller-save.o] Error 1
